# docassemble-VTSharedYMLFile

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/VTSharedYMLFile/: accordion.py
docassemble/VTSharedYMLFile/data/questions/: VTSharedYMLFile.yml
docassemble/VTSharedYMLFile/data/sources/: courts_list.xlsx  courts_list_full.xlsx
docassemble/VTSharedYMLFile/data/static/: style.css
